refactor: 컨벤션에 맞게 수정
Co-authored-by: kunsanglee <gosmdochee2@gmail.com>